--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,9 @@
   <script src="lib/angular/angular.js"></script>
   <script src="lib/underscore/underscore-min.js"></script>
   <script src="js/app.js"></script>
-  <script src="js/services.js"></script>
+  <script src="js/services/fzXsd.js"></script>
+  <script src="js/services/fzXml.js"></script>
+  <script src="js/services/fzModel2Xml.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
