--- a/app/index.html
+++ b/app/index.html
@@ -20,11 +20,13 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular.min.js"></script>
   -->
   <script src="lib/angular/angular.js"></script>
+  <script src="lib/angular/angular-resource.js"></script>
   <script src="lib/underscore/underscore-min.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services/fzXsd.js"></script>
   <script src="js/services/fzXml.js"></script>
   <script src="js/services/fzModel2Xml.js"></script>
+  <script src="js/services/fzLocalization.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
