many changes. most relevant is the added support for multiple forms.
modules renamed from definitionsCenter to formz. Reorganized the file
structure.

--- a/app/index-async.html
+++ b/app/index-async.html
@@ -45,7 +45,7 @@
       'js/directives.js'
     ], function() {
       // when all is done, execute bootstrap angular application
-      angular.bootstrap(document, ['definitionsCenter']);
+      angular.bootstrap(document, ['formz']);
     });
   </script>
   <title>My AngularJS App</title>
