--- a/app/index.html
+++ b/app/index.html
@@ -1,20 +1,14 @@
 <!doctype html>
-<html lang="en" ng-app="definitionsCenter">
+<html lang="en" ng-app="formz">
 <head>
   <meta charset="utf-8">
   <title>My AngularJS App</title>
-  <link rel="stylesheet" href="css/bootstrap.css"/>
+  <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css"/>
   <link rel="stylesheet" href="css/app.css"/>
 </head>
-<body>
-  <ul class="menu">
-    <li><a href="#/xsdForm/definitions.xsd">XSD Form</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
+<body ng-controller="MainCtrl">
 
   <div ng-view></div>
-
-  <div>Angular seed app: v<span app-version></span></div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular.min.js"></script>
@@ -22,6 +16,7 @@
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-resource.js"></script>
   <script src="lib/underscore/underscore-min.js"></script>
+  <script src="lib/angular-bootstrap/bootstrap.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services/fzXsd.js"></script>
   <script src="js/services/fzXml.js"></script>
