Created fzInput directive. Just a draft.
Also added jquery.

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,6 @@
   <script src="js/services/fzLocalization.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
-  <script src="js/directives.js"></script>
+  <script src="js/directives/fzInput.js"></script>
 </body>
 </html>
