Reorganized filters file structure.

--- a/app/index.html
+++ b/app/index.html
@@ -23,8 +23,7 @@
   <script src="js/services/fzModel2Xml.js"></script>
   <script src="js/services/fzLocalization.js"></script>
   <script src="js/controllers.js"></script>
-  <!--script src="js/filters/fzModel2Xml.js"></script-->
-  <script src="js/filters.js"></script>
+  <script src="js/filters/fzModel2Xml.js"></script>
   <script src="js/directives/fzField.js"></script>
 </body>
 </html>
