--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
   <script src="lib/angular/angular-resource.js"></script>
   <script src="lib/underscore/underscore-min.js"></script>
   <script src="lib/angular-bootstrap/bootstrap.js"></script>
+  <script src="lib/showdown/showdown.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services/fzXsd.js"></script>
   <script src="js/services/fzXml.js"></script>
@@ -25,5 +26,7 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters/fzModel2Xml.js"></script>
   <script src="js/directives/fzField.js"></script>
+  <script src="js/directives/fzFieldSet.js"></script>
+  <script src="js/directives/fzMarkdown.js"></script>
 </body>
 </html>
