Adds fzMinlength directive

--- a/app/index.html
+++ b/app/index.html
@@ -28,5 +28,6 @@
   <script src="js/directives/fzField.js"></script>
   <script src="js/directives/fzFieldSet.js"></script>
   <script src="js/directives/fzMarkdown.js"></script>
+  <script src="js/directives/fzInputValidations.js"></script>
 </body>
 </html>
